--- a/package/lrd/eventmon/Config.in
+++ b/package/lrd/eventmon/Config.in
@@ -1,5 +1,6 @@
 config BR2_PACKAGE_EVENTMON
 	bool "eventmon"
 	select BR2_PACKAGE_LIBNL
+	depends on BR2_PACKAGE_SDCSDK || BR2_PACKAGE_WB50N_LEGACY_SUMMIT_SUPPLICANT_BINARIES
 	help
 	  Laird Event Monitor
