--- a/configs/wb50n_sysd_defconfig
+++ b/configs/wb50n_sysd_defconfig
@@ -20,7 +20,7 @@ BR2_TARGET_GENERIC_ROOT_PASSWD="summit"
 BR2_ENABLE_LOCALE_WHITELIST="en_US"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/laird/wb50n_sysd/post_build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/wb50n_sysd/post_image.sh"
-BR2_ROOTFS_POST_SCRIPT_ARGS="wb50n_sysd"
+BR2_ROOTFS_POST_SCRIPT_ARGS="wb50n_sysd board/laird/configs-common/keys"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_DEFCONFIG="wb50n_sysd"
 BR2_LINUX_KERNEL_IMAGE_TARGET_CUSTOM=y
