--- a/configs/som60_fips_defconfig
+++ b/configs/som60_fips_defconfig
@@ -32,12 +32,6 @@ BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_APLAY=y
 BR2_PACKAGE_ALSA_UTILS_SPEAKER_TEST=y
 BR2_PACKAGE_BZIP2=y
-BR2_PACKAGE_GDB=y
-BR2_PACKAGE_LSOF=y
-BR2_PACKAGE_NETPERF=y
-BR2_PACKAGE_STRACE=y
-BR2_PACKAGE_TRACE_CMD=y
-BR2_PACKAGE_WHETSTONE=y
 BR2_PACKAGE_FSCRYPTCTL=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_DEVMEM2=y
@@ -48,6 +42,7 @@ BR2_PACKAGE_SETSERIAL=y
 BR2_PACKAGE_SREDIRD=y
 BR2_PACKAGE_STATSERIAL=y
 BR2_PACKAGE_UBOOT_TOOLS=y
+BR2_PACKAGE_UBOOT_TOOLS_DUMPIMAGE=y
 BR2_PACKAGE_PYTHON3_GOBJECT=y
 BR2_PACKAGE_LZO=y
 BR2_PACKAGE_CA_CERTIFICATES=y
@@ -59,7 +54,6 @@ BR2_PACKAGE_JSON_C=y
 BR2_PACKAGE_LIBCURL=y
 BR2_PACKAGE_LIBTIRPC=y
 BR2_PACKAGE_GOBJECT_INTROSPECTION=y
-BR2_PACKAGE_LIBDAEMON=y
 BR2_PACKAGE_LIBEDIT=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
 BR2_PACKAGE_BLUEZ5_UTILS_OBEX=y
