--- a/configs/som60sd_fips_defconfig
+++ b/configs/som60sd_fips_defconfig
@@ -31,12 +31,6 @@ BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_APLAY=y
 BR2_PACKAGE_ALSA_UTILS_SPEAKER_TEST=y
 BR2_PACKAGE_BZIP2=y
-BR2_PACKAGE_GDB=y
-BR2_PACKAGE_LSOF=y
-BR2_PACKAGE_NETPERF=y
-BR2_PACKAGE_STRACE=y
-BR2_PACKAGE_TRACE_CMD=y
-BR2_PACKAGE_WHETSTONE=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_DEVMEM2=y
 BR2_PACKAGE_I2C_TOOLS=y
@@ -46,6 +40,7 @@ BR2_PACKAGE_SETSERIAL=y
 BR2_PACKAGE_SREDIRD=y
 BR2_PACKAGE_STATSERIAL=y
 BR2_PACKAGE_UBOOT_TOOLS=y
+BR2_PACKAGE_UBOOT_TOOLS_DUMPIMAGE=y
 BR2_PACKAGE_PYTHON3_GOBJECT=y
 BR2_PACKAGE_LZO=y
 BR2_PACKAGE_CA_CERTIFICATES=y
