--- a/configs/wb50n_sysd_fips_defconfig
+++ b/configs/wb50n_sysd_fips_defconfig
@@ -36,12 +36,13 @@ BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_LINUXCONSOLETOOLS=y
 BR2_PACKAGE_MEMTESTER=y
 BR2_PACKAGE_SETSERIAL=y
+BR2_PACKAGE_SREDIRD=y
+BR2_PACKAGE_STATSERIAL=y
 BR2_PACKAGE_UBOOT_TOOLS=y
+BR2_PACKAGE_UBOOT_TOOLS_DUMPIMAGE=y
 BR2_PACKAGE_LZO=y
 BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_CRYPTODEV=y
-BR2_PACKAGE_LIBSSH=y
-BR2_PACKAGE_OPENSSL=y
 BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES=y
 BR2_PACKAGE_LIBOPENSSL_BIN=y
 BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES_VERSION_VALUE="7.0.0.128"
@@ -70,9 +71,9 @@ BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_IPTABLES=y
 BR2_PACKAGE_IW=y
 BR2_PACKAGE_MII_DIAG=y
+BR2_PACKAGE_PPPD=y
 BR2_PACKAGE_RSYNC=y
 BR2_PACKAGE_TCPDUMP=y
-BR2_PACKAGE_WIRELESS_REGDB=y
 BR2_PACKAGE_LOCKFILE_PROGS=y
 BR2_PACKAGE_KEYUTILS=y
 BR2_PACKAGE_SWUPDATE=y
@@ -108,7 +109,6 @@ BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
 BR2_LRD_WB50N_SYSD_FIPS_RADIO=y
 BR2_PACKAGE_LRD_RADIO_STACK_VERSION_VALUE="7.0.0.128"
-BR2_PACKAGE_OPENSSL_FIPS=y
 BR2_PACKAGE_FIPS_CHECK=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER=y
 BR2_PACKAGE_LRD_AUTOMOUNT=y
