--- a/configs/ig60llsd_defconfig
+++ b/configs/ig60llsd_defconfig
@@ -39,6 +39,7 @@ BR2_PACKAGE_DEVMEM2=y
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_LINUXCONSOLETOOLS=y
 BR2_PACKAGE_MEMTESTER=y
+BR2_PACKAGE_OFONO=y
 BR2_PACKAGE_SETSERIAL=y
 BR2_PACKAGE_UBOOT_TOOLS=y
 BR2_PACKAGE_PYTHON3_GOBJECT=y
@@ -122,6 +123,7 @@ BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
 BR2_LRD_SOM60_RADIO=y
 BR2_PACKAGE_MC_MINT=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER=y
+BR2_PACKAGE_LRD_NETWORK_MANAGER_MODEM_MANAGER=y
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 # BR2_PACKAGE_LRD_AUTOMOUNT_MMC is not set
 BR2_PACKAGE_LRD_USBGADGET=y
