--- a/package/lrd-closed-source/sdccli/Config.in
+++ b/package/lrd-closed-source/sdccli/Config.in
@@ -2,7 +2,7 @@ config BR2_PACKAGE_SDCCLI
 	bool "SDC CLI"
 	select BR2_PACKAGE_LIBNL
 	select BR2_PACKAGE_LIBEDIT
-	select BR2_PACKAGE_SDCSDK
+	depends on BR2_PACKAGE_SDCSDK_NM || BR2_PACKAGE_SDCSDK
 	help
 	  SDC CLI
 
