--- a/package/lrd-closed-source/Config.in
+++ b/package/lrd-closed-source/Config.in
@@ -13,3 +13,7 @@ source "package/lrd-closed-source/mfg60n/Config.in"
 source "package/lrd-closed-source/nordic_ota/Config.in"
 source "package/lrd-closed-source/adaptive_ww/Config.in"
 source "package/lrd-closed-source/lru_ath6kl/Config.in"
+source "package/lrd-closed-source/openssl-fips/Config.in"
+source "package/lrd-closed-source/kcapi-cavs/Config.in"
+source "package/lrd-closed-source/parser-cavs/Config.in"
+source "package/lrd-closed-source/openssl-testing/Config.in"
