--- a/board/boundarydevices/bdimx6_defconfig
+++ b/board/boundarydevices/bdimx6_defconfig
@@ -8,6 +8,7 @@ CONFIG_CGROUPS=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_CFS_BANDWIDTH=y
 CONFIG_NAMESPACES=y
+CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_EXPERT=y
 CONFIG_PERF_EVENTS=y
@@ -98,10 +99,6 @@ CONFIG_CAN=y
 CONFIG_CAN_FLEXCAN=y
 CONFIG_CAN_M_CAN=y
 CONFIG_CAN_MCP251X=m
-CONFIG_CFG80211=m
-CONFIG_NL80211_TESTMODE=y
-CONFIG_CFG80211_WEXT=y
-CONFIG_MAC80211=m
 CONFIG_RFKILL=y
 CONFIG_RFKILL_GPIO=y
 CONFIG_DEVTMPFS=y
@@ -175,16 +172,6 @@ CONFIG_USB_NET_CDC_MBIM=m
 # CONFIG_USB_NET_ZAURUS is not set
 CONFIG_USB_NET_QMI_WWAN=m
 CONFIG_USB_HSO=m
-CONFIG_ATH9K=m
-# CONFIG_ATH9K_RFKILL is not set
-CONFIG_BRCMFMAC=m
-CONFIG_IWLWIFI=m
-CONFIG_IWLDVM=m
-CONFIG_IWLMVM=m
-CONFIG_RTL8192CE=m
-CONFIG_WL12XX=m
-CONFIG_WLCORE_SDIO=m
-# CONFIG_WILINK_PLATFORM_DATA is not set
 CONFIG_INPUT_POLLDEV=y
 # CONFIG_INPUT_MOUSEDEV_PSAUX is not set
 CONFIG_INPUT_EVDEV=y
@@ -356,10 +343,12 @@ CONFIG_MXC_IPU_V3_PRE=y
 CONFIG_MXC_SIM=y
 CONFIG_MXC_MIPI_CSI2=y
 CONFIG_MXC_HDMI_CEC=y
+CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_LM3643=m
 CONFIG_LEDS_GPIO=y
 CONFIG_LEDS_PWM=m
+CONFIG_LEDS_TRIGGERS=y
 CONFIG_LEDS_TRIGGER_TIMER=y
 CONFIG_LEDS_TRIGGER_ONESHOT=y
 CONFIG_LEDS_TRIGGER_HEARTBEAT=y
@@ -430,6 +419,7 @@ CONFIG_NLS_UTF8=y
 CONFIG_PRINTK_TIME=y
 CONFIG_DEBUG_INFO=y
 CONFIG_FRAME_WARN=2048
+CONFIG_DEBUG_FS=y
 CONFIG_MAGIC_SYSRQ=y
 # CONFIG_SCHED_DEBUG is not set
 # CONFIG_DEBUG_BUGVERBOSE is not set
@@ -461,6 +451,7 @@ CONFIG_CRYPTO_RMD320=y
 CONFIG_CRYPTO_SHA512=y
 CONFIG_CRYPTO_TGR192=y
 CONFIG_CRYPTO_WP512=y
+CONFIG_CRYPTO_ARC4=m
 CONFIG_CRYPTO_BLOWFISH=y
 CONFIG_CRYPTO_CAMELLIA=y
 CONFIG_CRYPTO_TWOFISH=y
