--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@
 !/configs/wb*_defconfig
 !/configs/reglwb*_defconfig
 !/configs/bdimx6_defconfig
+!/configs/bdimx6_rdvk_defconfig
 !/configs/backports_defconfig
 !/configs/som60*_defconfig
 !/configs/ig60*_defconfig
