--- a/package/lrd/lrd-network-manager/Config.in
+++ b/package/lrd/lrd-network-manager/Config.in
@@ -7,13 +7,9 @@ config BR2_PACKAGE_LRD_NETWORK_MANAGER
 	# Tested with 3.2, but may even work with earlier versions
 	depends on BR2_TOOLCHAIN_HEADERS_AT_LEAST_3_2
 	depends on BR2_TOOLCHAIN_USES_GLIBC # CLOCK_BOOTTIME, IPTOS_CLASS_*
-	select BR2_PACKAGE_DHCPCD if !BR2_PACKAGE_DHCP_CLIENT && !BR2_PACKAGE_SYSTEMD_NETWORKD
 	select BR2_PACKAGE_DBUS
-	select BR2_PACKAGE_DBUS_GLIB
 	select BR2_PACKAGE_GNUTLS
 	select BR2_PACKAGE_LIBGCRYPT
-	select BR2_PACKAGE_LIBNL
-	select BR2_PACKAGE_LIBGUDEV
 	select BR2_PACKAGE_UTIL_LINUX
 	select BR2_PACKAGE_UTIL_LINUX_LIBUUID
 	select BR2_PACKAGE_WIRELESS_TOOLS
@@ -21,12 +17,12 @@ config BR2_PACKAGE_LRD_NETWORK_MANAGER
 	select BR2_PACKAGE_READLINE
 	select BR2_PACKAGE_LIBNDP
 	help
-	  NetworkManager is a set of co-operative tools that make networking
-	  simple and straightforward. Whether WiFi, wired, 3G, or Bluetooth,
-	  NetworkManager allows you to quickly move from one network to
-	  another: once a network has been configured and joined once, it
-	  can be detected and re-joined automatically the next time it's
-	  available.
+	  NetworkManager is a set of co-operative tools that make
+	  networking simple and straightforward. Whether WiFi, wired,
+	  3G, or Bluetooth, NetworkManager allows you to quickly move
+	  from one network to another: once a network has been
+	  configured and joined once, it can be detected and re-joined
+	  automatically the next time it's available.
 
 	  http://projects.gnome.org/NetworkManager/
 
@@ -56,9 +52,15 @@ config BR2_PACKAGE_LRD_NETWORK_MANAGER_PPPD
 comment "pppd support needs a glibc or uClibc toolchain"
 	depends on BR2_TOOLCHAIN_USES_MUSL
 
+config BR2_PACKAGE_LRD_NETWORK_MANAGER_OVS
+	bool "OpenVSwitch support"
+	select BR2_PACKAGE_JANSSON
+	help
+	  This option enables support for OpenVSwitch
+
 endif
 
-comment "Laird NetworkManager needs udev /dev management and a (e)glibc toolchain w/ headers >= 3.7"
+comment "Laird NetworkManager needs udev /dev management and a glibc toolchain w/ headers >= 3.7, dynamic library"
 	depends on BR2_USE_MMU
 	depends on !BR2_PACKAGE_HAS_UDEV || \
 		!BR2_TOOLCHAIN_HEADERS_AT_LEAST_3_7 || \
