--- a/configs/adaptive_ww-powerpc-e5500_defconfig
+++ b/configs/adaptive_ww-powerpc-e5500_defconfig
@@ -1,6 +1,6 @@
 BR2_powerpc64=y
 BR2_WGET="wget --passive-ftp -nd"
-BR2_DL_DIR="$(TOPDIR)/../archive"
+BR2_DL_DIR="$(HOME)/.br2_dl_dir"
 BR2_JLEVEL=16
 BR2_CCACHE=y
 BR2_CCACHE_DIR="$(BR2_DL_DIR)/.buildroot-ccache"
