--- a/configs/wb50n_rdvk_defconfig
+++ b/configs/wb50n_rdvk_defconfig
@@ -1,7 +1,7 @@
 BR2_arm=y
 BR2_cortex_a5=y
 BR2_WGET="wget --passive-ftp -nd"
-BR2_DL_DIR="$(TOPDIR)/../archive"
+BR2_DL_DIR="$(HOME)/.br2_dl_dir"
 BR2_JLEVEL=16
 BR2_CCACHE=y
 BR2_CCACHE_DIR="$(BR2_DL_DIR)/.buildroot-ccache"
